[gd_scene load_steps=5 format=3 uid="uid://cioc3x7tqay3b"]

[ext_resource type="Script" path="res://src/scripts/Lesson/Prelim/Prelim_1.25.gd" id="1_07ia7"]
[ext_resource type="Texture2D" uid="uid://byio0luq7uppw" path="res://assets/images/Background/StarField.png" id="2_g5s68"]
[ext_resource type="PackedScene" uid="uid://r7v4w30c0k7l" path="res://src/scenes/Components/Pause.tscn" id="3_i2q81"]
[ext_resource type="StyleBox" uid="uid://c3kublerkkkwi" path="res://modern_button.tres" id="5_d7bf5"]

[node name="Prelim1_25" type="Node2D"]
script = ExtResource("1_07ia7")

[node name="StarField" type="Sprite2D" parent="."]
position = Vector2(963.999, 541.998)
scale = Vector2(1.88281, 1.05859)
texture = ExtResource("2_g5s68")
metadata/_edit_lock_ = true

[node name="Pause" parent="." instance=ExtResource("3_i2q81")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 68.0
offset_top = 162.0
offset_right = 1868.0
offset_bottom = 1019.0
theme_override_constants/separation = 30

[node name="Header" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "Rich Text"
fit_content = true

[node name="DetailOne" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Rich Text"
fit_content = true

[node name="DetailTwo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Rich Text"
fit_content = true

[node name="DetailThree" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Rich Text"
fit_content = true

[node name="QuitButton" type="Button" parent="."]
offset_left = 53.0
offset_top = 917.0
offset_right = 837.0
offset_bottom = 1037.0
scale = Vector2(0.879999, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("5_d7bf5")
text = "Proceed to Quiz"

[node name="QuitButton2" type="Button" parent="."]
offset_left = 1155.0
offset_top = 917.0
offset_right = 1967.0
offset_bottom = 1037.0
scale = Vector2(0.879999, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("5_d7bf5")
text = "Go back to menu"
